--- a/07-io/lekce07-io.tex
+++ b/07-io/lekce07-io.tex
@@ -494,7 +494,7 @@ Zřetězený procesor -- pipelined verze
 \frametitle{Shrnutí komunikace periferií}
 
 \begin{itemize}
-\item uvedený způsob komunikace je tzv. pooling
+\item uvedený způsob komunikace je tzv. polling
 \begin{itemize}
 \item program se neustále dotazuje, zda se něco nezměnilo, nepřišel znak, nebo se uvolnila odesílací fronta
 \item toto je velmi neefektivní, zatěžuje zbytečně CPU, které by mohlo dělat něco užitečného
