Lekce 08 - translated slides with knobs and LCD peripherals

--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -113,5 +113,41 @@ přítup k PS periferiím i pinům programovatelné logiky PL (FPGA).
 
 \end{frame}
 
+
+\begin{frame}
+\frametitle{MZ\_APO -- návrh v programu Vivado}
+  \begin{center}
+    \includegraphics[width=0.85\textwidth]{fig/mz_apo-vivado-screenshot.png}
+  \end{center}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{MZ\_APO -- logický návrh sběrnic}
+
+\includegraphics[width=1.0\textwidth]{mz_apo-vivado-design.pdf}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{MZ\_APO -- indikátory LED a otočné voliče}
+
+\includegraphics[width=1.0\textwidth]{mz_apo-spiled-and-knobs-cz.pdf}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Zápis na displej na kitu MZ\_APO}
+
+\includegraphics[width=0.9\textwidth]{mz_apo-lcd-access-cz.pdf}
+
+\end{frame}
+
+
+
 \end{document}
 
