Lekce 08 and Lekce 02 - correction of page tables figures.

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -598,7 +598,7 @@ systému pro 4\,kB stránky potřeba alokovat 4\,MB (překlad 20-bitů adresy,
 {
 \centering
 
-\includegraphics[width=0.75\linewidth]{paging-2-levels.pdf}
+\includegraphics[width=0.7\linewidth]{paging-2-levels-cz.pdf}
 
 }
 
