Lekce 08 - return back and translate to Czech AXI channels concept.

--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -269,6 +269,19 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 \end{frame}
 
 \begin{frame}
+\frametitle{Sběrice AMBA AXI -- princip kanálů}
+
+\begin{center}
+\includegraphics[width=0.55\textwidth]{amba-axi-read-concept-cz}
+\end{center}
+
+\begin{center}
+\includegraphics[width=0.55\textwidth]{amba-axi-write-concept-cz}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
 \frametitle{Sběrice AMBA AXI -- čtení}
 
 \begin{center}
