Lekce 08 - correct typo.

--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -269,7 +269,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 \end{frame}
 
 \begin{frame}
-\frametitle{Sběrice AMBA AXI -- princip kanálů}
+\frametitle{Sběrnice AMBA AXI -- princip kanálů}
 
 \begin{center}
 \includegraphics[width=0.55\textwidth]{amba-axi-read-concept-cz}
@@ -282,7 +282,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 \end{frame}
 
 \begin{frame}
-\frametitle{Sběrice AMBA AXI -- čtení}
+\frametitle{Sběrnice AMBA AXI -- čtení}
 
 \begin{center}
 \includegraphics[width=1.0\textwidth]{amba-axi-read.pdf}
@@ -296,7 +296,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 \end{frame}
 
 \begin{frame}
-\frametitle{Sběrice AMBA AXI -- zápis}
+\frametitle{Sběrnice AMBA AXI -- zápis}
 
 \begin{center}
 \includegraphics[width=1.0\textwidth]{amba-axi-write.pdf}
